--- a/index.html
+++ b/index.html
@@ -1,32 +1,74 @@
+
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-  <meta charset="UTF-8">
-  <title>Kurýrní aplikace – OCR (verze 3)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>Kurýrní aplikace</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body { font-family: sans-serif; margin: 0; padding: 1rem; }
-    video { width: 100%; max-height: 300px; border: 1px solid #ccc; margin-bottom: 1rem; }
-    .item { border: 1px solid #ccc; padding: 6px; margin: 4px 0; border-radius: 5px; background: #f9f9f9; }
-    button {
-      font-size: 1.5rem;
-      padding: 1rem;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      width: 100%;
-      margin: 1rem 0;
-    }
+    body { font-family: sans-serif; padding: 10px; }
+    #camera-btn { font-size: 20px; padding: 16px 32px; margin: 16px 0; background-color: #007bff; color: white; border: none; border-radius: 8px; width: 100%; }
+    .address { margin: 5px 0; padding: 5px; border: 1px solid #ccc; border-radius: 4px; position: relative; }
+    .delete-btn { position: absolute; top: 5px; right: 10px; background: red; color: white; border: none; border-radius: 50%; width: 20px; height: 20px; cursor: pointer; }
+    #delete-all { display: none; margin-top: 10px; background: darkred; color: white; padding: 10px; border: none; border-radius: 5px; }
   </style>
 </head>
 <body>
-  <h2>📷 Skenuj etikety – OCR (chytré čtení)</h2>
-  <video id="video" autoplay playsinline></video>
-  <button onclick="captureAndRecognize()">📸 Naskenovat adresu</button>
+  <h1>📦 Kurýrní aplikace (verze 4)</h1>
+  <button id="camera-btn">📸 Naskenovat adresu</button>
   <div id="addresses"></div>
+  <button id="delete-all">🗑 Vymazat adresy</button>
+  <script>
+    let addresses = JSON.parse(localStorage.getItem("addresses") || "[]");
+    const container = document.getElementById("addresses");
+    const deleteAllBtn = document.getElementById("delete-all");
 
-  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.1.1/dist/tesseract.min.js"></script>
-  <script src="ocr.js"></script>
+    function render() {
+      container.innerHTML = "";
+      addresses.forEach((addr, idx) => {
+        const div = document.createElement("div");
+        div.className = "address";
+        div.textContent = addr;
+        const btn = document.createElement("button");
+        btn.textContent = "×";
+        btn.className = "delete-btn";
+        btn.onclick = () => {
+          if (confirm("Opravdu smazat tuto adresu?")) {
+            addresses.splice(idx, 1);
+            save();
+          }
+        };
+        div.appendChild(btn);
+        container.appendChild(div);
+      });
+      deleteAllBtn.style.display = addresses.length > 0 ? "block" : "none";
+    }
+
+    function save() {
+      localStorage.setItem("addresses", JSON.stringify(addresses));
+      render();
+    }
+
+    document.getElementById("camera-btn").onclick = async () => {
+      const text = prompt("OCR výstup (zatím ručně):");
+      const cleaned = text.replace(/[^\w\s\/\-\.]/g, "").trim();
+      if (!cleaned) return;
+      if (addresses.includes(cleaned)) {
+        alert("Adresa již naskenována");
+        return;
+      }
+      addresses.push(cleaned);
+      save();
+    };
+
+    deleteAllBtn.onclick = () => {
+      if (confirm("Chcete opravdu vymazat všechny adresy?")) {
+        addresses = [];
+        save();
+      }
+    };
+
+    render();
+  </script>
 </body>
 </html>
