--- a/index.html
+++ b/index.html
@@ -3,25 +3,40 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8" />
-  <title>Kurýrní aplikace</title>
+  <title>Kurýrní aplikace v5</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body { font-family: sans-serif; padding: 10px; }
     #camera-btn { font-size: 20px; padding: 16px 32px; margin: 16px 0; background-color: #007bff; color: white; border: none; border-radius: 8px; width: 100%; }
-    .address { margin: 5px 0; padding: 5px; border: 1px solid #ccc; border-radius: 4px; position: relative; }
+    .address { margin: 5px 0; padding: 5px; border: 1px solid #ccc; border-radius: 4px; position: relative; cursor: pointer; background: #f9f9f9; }
     .delete-btn { position: absolute; top: 5px; right: 10px; background: red; color: white; border: none; border-radius: 50%; width: 20px; height: 20px; cursor: pointer; }
     #delete-all { display: none; margin-top: 10px; background: darkred; color: white; padding: 10px; border: none; border-radius: 5px; }
+    #edit-modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); align-items: center; justify-content: center; }
+    #edit-box { background: white; padding: 20px; border-radius: 8px; width: 90%; max-width: 400px; }
+    #edit-input { width: 100%; padding: 10px; font-size: 1rem; margin-bottom: 10px; }
   </style>
 </head>
 <body>
-  <h1>📦 Kurýrní aplikace (verze 4)</h1>
+  <h1>📦 Kurýrní aplikace (verze 5)</h1>
   <button id="camera-btn">📸 Naskenovat adresu</button>
   <div id="addresses"></div>
   <button id="delete-all">🗑 Vymazat adresy</button>
+
+  <div id="edit-modal">
+    <div id="edit-box">
+      <input id="edit-input" type="text" />
+      <button onclick="saveEdit()">💾 Uložit</button>
+      <button onclick="closeEdit()">Zrušit</button>
+    </div>
+  </div>
+
   <script>
     let addresses = JSON.parse(localStorage.getItem("addresses") || "[]");
-    const container = document.getElementById("addresses");
-    const deleteAllBtn = document.getElementById("delete-all");
+    let container = document.getElementById("addresses");
+    let deleteAllBtn = document.getElementById("delete-all");
+    let editModal = document.getElementById("edit-modal");
+    let editInput = document.getElementById("edit-input");
+    let editIndex = -1;
 
     function render() {
       container.innerHTML = "";
@@ -29,10 +44,12 @@
         const div = document.createElement("div");
         div.className = "address";
         div.textContent = addr;
+        div.onclick = () => openEdit(idx);
         const btn = document.createElement("button");
         btn.textContent = "×";
         btn.className = "delete-btn";
-        btn.onclick = () => {
+        btn.onclick = (e) => {
+          e.stopPropagation();
           if (confirm("Opravdu smazat tuto adresu?")) {
             addresses.splice(idx, 1);
             save();
@@ -67,6 +84,25 @@
         save();
       }
     };
+
+    function openEdit(idx) {
+      editIndex = idx;
+      editInput.value = addresses[idx];
+      editModal.style.display = "flex";
+    }
+
+    function closeEdit() {
+      editModal.style.display = "none";
+      editIndex = -1;
+    }
+
+    function saveEdit() {
+      if (editIndex >= 0) {
+        addresses[editIndex] = editInput.value.trim();
+        save();
+        closeEdit();
+      }
+    }
 
     render();
   </script>
