--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8" />
-  <title>Kurýrní aplikace v5</title>
+  <title>Kurýrní aplikace v6</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body { font-family: sans-serif; padding: 10px; }
-    #camera-btn { font-size: 20px; padding: 16px 32px; margin: 16px 0; background-color: #007bff; color: white; border: none; border-radius: 8px; width: 100%; }
+    video { width: 100%; border: 1px solid #ccc; border-radius: 8px; margin: 10px 0; }
+    #camera-btn { font-size: 20px; padding: 16px 32px; margin: 10px 0; background-color: #007bff; color: white; border: none; border-radius: 8px; width: 100%; }
     .address { margin: 5px 0; padding: 5px; border: 1px solid #ccc; border-radius: 4px; position: relative; cursor: pointer; background: #f9f9f9; }
     .delete-btn { position: absolute; top: 5px; right: 10px; background: red; color: white; border: none; border-radius: 50%; width: 20px; height: 20px; cursor: pointer; }
     #delete-all { display: none; margin-top: 10px; background: darkred; color: white; padding: 10px; border: none; border-radius: 5px; }
@@ -17,7 +18,8 @@
   </style>
 </head>
 <body>
-  <h1>📦 Kurýrní aplikace (verze 5)</h1>
+  <h1>📦 Kurýrní aplikace (verze 6)</h1>
+  <video id="video" autoplay playsinline></video>
   <button id="camera-btn">📸 Naskenovat adresu</button>
   <div id="addresses"></div>
   <button id="delete-all">🗑 Vymazat adresy</button>
@@ -30,6 +32,7 @@
     </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.1.1/dist/tesseract.min.js"></script>
   <script>
     let addresses = JSON.parse(localStorage.getItem("addresses") || "[]");
     let container = document.getElementById("addresses");
@@ -37,6 +40,14 @@
     let editModal = document.getElementById("edit-modal");
     let editInput = document.getElementById("edit-input");
     let editIndex = -1;
+
+    function normalize(text) {
+      return text.toLowerCase().replace(/[^a-z0-9\/\s]/gi, "").replace(/\s+/g, " ").trim();
+    }
+
+    function fixHouseNumbers(str) {
+      return str.replace(/(\d{3,5})(\d{2,4})/, "$1/$2");
+    }
 
     function render() {
       container.innerHTML = "";
@@ -66,25 +77,6 @@
       render();
     }
 
-    document.getElementById("camera-btn").onclick = async () => {
-      const text = prompt("OCR výstup (zatím ručně):");
-      const cleaned = text.replace(/[^\w\s\/\-\.]/g, "").trim();
-      if (!cleaned) return;
-      if (addresses.includes(cleaned)) {
-        alert("Adresa již naskenována");
-        return;
-      }
-      addresses.push(cleaned);
-      save();
-    };
-
-    deleteAllBtn.onclick = () => {
-      if (confirm("Chcete opravdu vymazat všechny adresy?")) {
-        addresses = [];
-        save();
-      }
-    };
-
     function openEdit(idx) {
       editIndex = idx;
       editInput.value = addresses[idx];
@@ -103,6 +95,48 @@
         closeEdit();
       }
     }
+
+    async function captureAndRecognize() {
+      const canvas = document.createElement("canvas");
+      canvas.width = video.videoWidth;
+      canvas.height = video.videoHeight;
+      const ctx = canvas.getContext("2d");
+      ctx.drawImage(video, 0, 0);
+      const { data: { text } } = await Tesseract.recognize(canvas, 'ces');
+
+      const lines = text.split("\n").map(l => l.trim()).filter(l => l.length > 0);
+      const candidates = lines.filter(l => l.match(/\d{3,}/));
+      if (candidates.length === 0) {
+        alert("❌ Adresa nenalezena.");
+        return;
+      }
+
+      let raw = candidates.join(" ");
+      raw = fixHouseNumbers(raw);
+      const key = normalize(raw);
+      if (addresses.map(a => normalize(a)).includes(key)) {
+        alert("⚠️ Adresa již naskenována.");
+        return;
+      }
+
+      addresses.push(raw.trim());
+      save();
+    }
+
+    document.getElementById("camera-btn").onclick = () => {
+      captureAndRecognize();
+    };
+
+    deleteAllBtn.onclick = () => {
+      if (confirm("Chcete opravdu vymazat všechny adresy?")) {
+        addresses = [];
+        save();
+      }
+    };
+
+    navigator.mediaDevices.getUserMedia({ video: { facingMode: { exact: "environment" } } })
+      .then(stream => video.srcObject = stream)
+      .catch(err => alert("Kamera není dostupná: " + err));
 
     render();
   </script>
