--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8" />
-  <title>Kurýrní aplikace v6</title>
+  <title>Kurýrní aplikace v6.1</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body { font-family: sans-serif; padding: 10px; }
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <h1>📦 Kurýrní aplikace (verze 6)</h1>
+  <h1>📦 Kurýrní aplikace (verze 6.1)</h1>
   <video id="video" autoplay playsinline></video>
   <button id="camera-btn">📸 Naskenovat adresu</button>
   <div id="addresses"></div>
@@ -46,7 +46,16 @@
     }
 
     function fixHouseNumbers(str) {
-      return str.replace(/(\d{3,5})(\d{2,4})/, "$1/$2");
+      return str.replace(/(\d{3,5})(\s?)(\d{2,4})/, "$1/$3");
+    }
+
+    function cleanOCRText(text) {
+      return text
+        .replace(/[|“”„—–-]+/g, "")  // odstraní rámovací znaky
+        .replace(/\s{2,}/g, " ")     // zredukuje mezery
+        .replace(/([0-9]{3,5})\s?([0-9]{2,4})/g, "$1/$2")  // čísla jako 1310110 → 1310/110
+        .replace(/\b\d{3}\s?\d{2}\b/g, "") // odstraní PSČ
+        .trim();
     }
 
     function render() {
@@ -104,22 +113,18 @@
       ctx.drawImage(video, 0, 0);
       const { data: { text } } = await Tesseract.recognize(canvas, 'ces');
 
-      const lines = text.split("\n").map(l => l.trim()).filter(l => l.length > 0);
-      const candidates = lines.filter(l => l.match(/\d{3,}/));
-      if (candidates.length === 0) {
+      const cleanedText = cleanOCRText(text);
+      const key = normalize(cleanedText);
+      if (!cleanedText || key.length < 5) {
         alert("❌ Adresa nenalezena.");
         return;
       }
-
-      let raw = candidates.join(" ");
-      raw = fixHouseNumbers(raw);
-      const key = normalize(raw);
       if (addresses.map(a => normalize(a)).includes(key)) {
         alert("⚠️ Adresa již naskenována.");
         return;
       }
 
-      addresses.push(raw.trim());
+      addresses.push(cleanedText);
       save();
     }
 
@@ -134,9 +139,17 @@
       }
     };
 
-    navigator.mediaDevices.getUserMedia({ video: { facingMode: { exact: "environment" } } })
-      .then(stream => video.srcObject = stream)
-      .catch(err => alert("Kamera není dostupná: " + err));
+    navigator.mediaDevices.getUserMedia({
+      video: {
+        facingMode: { exact: "environment" },
+        width: { ideal: 1920 },
+        height: { ideal: 1080 }
+      }
+    }).then(stream => {
+      video.srcObject = stream;
+    }).catch(err => {
+      alert("Kamera není dostupná: " + err);
+    });
 
     render();
   </script>
