--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8" />
-  <title>Kurýrní aplikace v6.1</title>
+  <title>Kurýrní aplikace v6.2</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body { font-family: sans-serif; padding: 10px; }
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <h1>📦 Kurýrní aplikace (verze 6.1)</h1>
+  <h1>📦 Kurýrní aplikace (verze 6.2)</h1>
   <video id="video" autoplay playsinline></video>
   <button id="camera-btn">📸 Naskenovat adresu</button>
   <div id="addresses"></div>
@@ -45,17 +45,20 @@
       return text.toLowerCase().replace(/[^a-z0-9\/\s]/gi, "").replace(/\s+/g, " ").trim();
     }
 
-    function fixHouseNumbers(str) {
-      return str.replace(/(\d{3,5})(\s?)(\d{2,4})/, "$1/$3");
-    }
+    function extractAddress(text) {
+      const lines = text.split('\n').map(line => line.trim()).filter(l => l.length > 0);
+      const addressLines = [];
 
-    function cleanOCRText(text) {
-      return text
-        .replace(/[|“”„—–-]+/g, "")  // odstraní rámovací znaky
-        .replace(/\s{2,}/g, " ")     // zredukuje mezery
-        .replace(/([0-9]{3,5})\s?([0-9]{2,4})/g, "$1/$2")  // čísla jako 1310110 → 1310/110
-        .replace(/\b\d{3}\s?\d{2}\b/g, "") // odstraní PSČ
-        .trim();
+      for (let i = 0; i < lines.length - 1; i++) {
+        const line1 = lines[i];
+        const line2 = lines[i + 1];
+        const combined = line1 + ', ' + line2;
+        if (combined.match(/[A-Za-zá-žÁ-Ž\s]+\s\d{1,4}\/\d{1,4},?\s?[A-Za-zá-žÁ-Ž\s-]+/)) {
+          return combined.replace(/\s{2,}/g, ' ').replace(/\s,/, ',').trim();
+        }
+      }
+
+      return null;
     }
 
     function render() {
@@ -113,18 +116,19 @@
       ctx.drawImage(video, 0, 0);
       const { data: { text } } = await Tesseract.recognize(canvas, 'ces');
 
-      const cleanedText = cleanOCRText(text);
-      const key = normalize(cleanedText);
-      if (!cleanedText || key.length < 5) {
-        alert("❌ Adresa nenalezena.");
+      const cleanAddress = extractAddress(text);
+      if (!cleanAddress) {
+        alert("❌ Čistá adresa nenalezena.");
         return;
       }
+
+      const key = normalize(cleanAddress);
       if (addresses.map(a => normalize(a)).includes(key)) {
         alert("⚠️ Adresa již naskenována.");
         return;
       }
 
-      addresses.push(cleanedText);
+      addresses.push(cleanAddress);
       save();
     }
 
