--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="cs">
 <head>
   <meta charset="UTF-8" />
-  <title>Kurýrní aplikace v6.2</title>
+  <title>Kurýrní aplikace v6.3</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body { font-family: sans-serif; padding: 10px; }
-    video { width: 100%; border: 1px solid #ccc; border-radius: 8px; margin: 10px 0; }
-    #camera-btn { font-size: 20px; padding: 16px 32px; margin: 10px 0; background-color: #007bff; color: white; border: none; border-radius: 8px; width: 100%; }
+    video { width: 100%; height: 240px; object-fit: cover; border: 1px solid #ccc; border-radius: 8px; margin: 10px 0; }
+    #camera-btn { font-size: 20px; padding: 16px 32px; margin: 10px 0; background-color: #007bff; color: white; border: none; border-radius: 8px; width: 100%; transition: background-color 0.3s ease; }
+    #camera-btn[disabled] { background-color: #888; }
     .address { margin: 5px 0; padding: 5px; border: 1px solid #ccc; border-radius: 4px; position: relative; cursor: pointer; background: #f9f9f9; }
     .delete-btn { position: absolute; top: 5px; right: 10px; background: red; color: white; border: none; border-radius: 50%; width: 20px; height: 20px; cursor: pointer; }
     #delete-all { display: none; margin-top: 10px; background: darkred; color: white; padding: 10px; border: none; border-radius: 5px; }
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <h1>📦 Kurýrní aplikace (verze 6.2)</h1>
+  <h1>📦 Kurýrní aplikace (verze 6.3)</h1>
   <video id="video" autoplay playsinline></video>
   <button id="camera-btn">📸 Naskenovat adresu</button>
   <div id="addresses"></div>
@@ -40,6 +40,7 @@
     let editModal = document.getElementById("edit-modal");
     let editInput = document.getElementById("edit-input");
     let editIndex = -1;
+    let cameraBtn = document.getElementById("camera-btn");
 
     function normalize(text) {
       return text.toLowerCase().replace(/[^a-z0-9\/\s]/gi, "").replace(/\s+/g, " ").trim();
@@ -109,6 +110,9 @@
     }
 
     async function captureAndRecognize() {
+      cameraBtn.disabled = true;
+      cameraBtn.textContent = "🔍 Skenuji…";
+
       const canvas = document.createElement("canvas");
       canvas.width = video.videoWidth;
       canvas.height = video.videoHeight;
@@ -119,17 +123,25 @@
       const cleanAddress = extractAddress(text);
       if (!cleanAddress) {
         alert("❌ Čistá adresa nenalezena.");
+        resetCameraButton();
         return;
       }
 
       const key = normalize(cleanAddress);
       if (addresses.map(a => normalize(a)).includes(key)) {
         alert("⚠️ Adresa již naskenována.");
+        resetCameraButton();
         return;
       }
 
       addresses.push(cleanAddress);
       save();
+      setTimeout(() => resetCameraButton(), 1000);
+    }
+
+    function resetCameraButton() {
+      cameraBtn.disabled = false;
+      cameraBtn.textContent = "📸 Naskenovat adresu";
     }
 
     document.getElementById("camera-btn").onclick = () => {
