--- a/index.html
+++ b/index.html
@@ -2,178 +2,100 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8" />
-  <title>Kurýrní aplikace v6.4</title>
+  <title>Kurýrní aplikace v7.0</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body { font-family: sans-serif; padding: 10px; }
-    video { width: 100%; height: 220px; object-fit: cover; border: 1px solid #ccc; border-radius: 8px; margin: 10px 0; }
-    #camera-btn { font-size: 20px; padding: 16px 32px; margin: 10px 0; background-color: #007bff; color: white; border: none; border-radius: 8px; width: 100%; transition: background-color 0.3s ease; }
+    #map { height: 300px; border: 1px solid #ccc; border-radius: 8px; margin: 10px 0; }
+    #camera-btn { font-size: 20px; padding: 16px 32px; margin: 10px 0; background-color: #007bff; color: white; border: none; border-radius: 8px; width: 100%; }
     #camera-btn[disabled] { background-color: #888; }
-    .address { margin: 5px 0; padding: 5px; border: 1px solid #ccc; border-radius: 4px; position: relative; cursor: pointer; background: #f9f9f9; }
-    .delete-btn { position: absolute; top: 5px; right: 10px; background: red; color: white; border: none; border-radius: 50%; width: 20px; height: 20px; cursor: pointer; }
-    #delete-all { display: none; margin-top: 10px; background: darkred; color: white; padding: 10px; border: none; border-radius: 5px; }
-    #edit-modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); align-items: center; justify-content: center; }
-    #edit-box { background: white; padding: 20px; border-radius: 8px; width: 90%; max-width: 400px; }
-    #edit-input { width: 100%; padding: 10px; font-size: 1rem; margin-bottom: 10px; }
+    .address { margin: 5px 0; padding: 5px; border: 1px solid #ccc; border-radius: 4px; cursor: pointer; background: #f9f9f9; }
   </style>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 <body>
-  <h1>📦 Kurýrní aplikace (verze 6.4)</h1>
-  <video id="video" autoplay playsinline></video>
+  <h1>📦 Kurýrní aplikace (verze 7.0)</h1>
+  <div id="map"></div>
   <button id="camera-btn">📸 Naskenovat adresu</button>
   <div id="addresses"></div>
-  <button id="delete-all">🗑 Vymazat adresy</button>
 
-  <div id="edit-modal">
-    <div id="edit-box">
-      <input id="edit-input" type="text" />
-      <button onclick="saveEdit()">💾 Uložit</button>
-      <button onclick="closeEdit()">Zrušit</button>
-    </div>
-  </div>
-
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.1.1/dist/tesseract.min.js"></script>
   <script>
+    let map = L.map('map').setView([50.08, 14.44], 11);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 19
+    }).addTo(map);
+
     let addresses = JSON.parse(localStorage.getItem("addresses") || "[]");
-    let container = document.getElementById("addresses");
-    let deleteAllBtn = document.getElementById("delete-all");
-    let editModal = document.getElementById("edit-modal");
-    let editInput = document.getElementById("edit-input");
-    let editIndex = -1;
-    let cameraBtn = document.getElementById("camera-btn");
-    let video = document.getElementById("video");
-    let stream = null;
+    let markers = [];
 
-    function normalize(text) {
-      return text.toLowerCase().replace(/[^a-z0-9\/\s]/gi, "").replace(/\s+/g, " ").trim();
+    function addMarker(lat, lng, text) {
+      const marker = L.marker([lat, lng]).addTo(map).bindPopup(text);
+      markers.push(marker);
     }
 
-    function extractAddress(text) {
-      const lines = text.split('\n').map(line => line.trim()).filter(l => l.length > 0);
-      for (let i = 0; i < lines.length - 1; i++) {
-        const line1 = lines[i].replace(/[^A-Za-z0-9á-žÁ-Ž\s\/]/g, '');
-        const line2 = lines[i+1].replace(/[^A-Za-z0-9á-žÁ-Ž\s\/\-]/g, '');
-        if (line1.match(/\d{1,4}\/\d{1,4}/) && line2.match(/[A-Za-zá-žÁ-Ž]/)) {
-          return line1 + ', ' + line2;
-        }
-      }
-      return null;
-    }
-
-    function render() {
-      container.innerHTML = "";
-      addresses.forEach((addr, idx) => {
+    function renderAddresses() {
+      document.getElementById("addresses").innerHTML = "";
+      addresses.forEach((item, idx) => {
         const div = document.createElement("div");
         div.className = "address";
-        div.textContent = addr;
-        div.onclick = () => openEdit(idx);
-        const btn = document.createElement("button");
-        btn.textContent = "×";
-        btn.className = "delete-btn";
-        btn.onclick = (e) => {
-          e.stopPropagation();
-          if (confirm("Opravdu smazat tuto adresu?")) {
-            addresses.splice(idx, 1);
-            save();
-            restartCamera();
-          }
+        div.textContent = item.text;
+        div.onclick = () => {
+          map.setView([item.lat, item.lng], 15);
+          markers[idx].openPopup();
         };
-        div.appendChild(btn);
-        container.appendChild(div);
+        document.getElementById("addresses").appendChild(div);
       });
-      deleteAllBtn.style.display = addresses.length > 0 ? "block" : "none";
     }
 
-    function save() {
-      localStorage.setItem("addresses", JSON.stringify(addresses));
-      render();
+    function geocode(address) {
+      fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(address)}`)
+        .then(response => response.json())
+        .then(data => {
+          if (data && data[0]) {
+            const lat = parseFloat(data[0].lat);
+            const lng = parseFloat(data[0].lon);
+            addMarker(lat, lng, address);
+            addresses.push({ text: address, lat, lng });
+            localStorage.setItem("addresses", JSON.stringify(addresses));
+            renderAddresses();
+          } else {
+            alert("Nepodařilo se najít souřadnice.");
+          }
+        });
     }
 
-    function openEdit(idx) {
-      editIndex = idx;
-      editInput.value = addresses[idx];
-      editModal.style.display = "flex";
-    }
-
-    function closeEdit() {
-      editModal.style.display = "none";
-      editIndex = -1;
-      restartCamera();
-    }
-
-    function saveEdit() {
-      if (editIndex >= 0) {
-        addresses[editIndex] = editInput.value.trim();
-        save();
-        closeEdit();
-      }
-    }
-
-    async function captureAndRecognize() {
-      cameraBtn.disabled = true;
-      cameraBtn.textContent = "🔍 Skenuji…";
+    async function scanAddress() {
       const canvas = document.createElement("canvas");
       canvas.width = video.videoWidth;
       canvas.height = video.videoHeight;
       const ctx = canvas.getContext("2d");
       ctx.drawImage(video, 0, 0);
       const { data: { text } } = await Tesseract.recognize(canvas, 'ces');
-      const cleanAddress = extractAddress(text);
-      if (!cleanAddress) {
-        alert("❌ Čistá adresa nenalezena.");
-        restartCamera();
-        resetCameraButton();
+
+      const clean = text.replace(/[^A-Za-z0-9á-žÁ-Ž\s\/\-]/g, '').trim();
+      if (!clean) { alert("❌ Nenalezena adresa."); return; }
+
+      if (addresses.map(a => a.text.toLowerCase()).includes(clean.toLowerCase())) {
+        alert("⚠️ Adresa již existuje.");
         return;
       }
-      const key = normalize(cleanAddress);
-      if (addresses.map(a => normalize(a)).includes(key)) {
-        alert("⚠️ Adresa již naskenována.");
-        restartCamera();
-        resetCameraButton();
-        return;
-      }
-      addresses.push(cleanAddress);
-      save();
-      setTimeout(() => resetCameraButton(), 1000);
+
+      geocode(clean);
     }
 
-    function resetCameraButton() {
-      cameraBtn.disabled = false;
-      cameraBtn.textContent = "📸 Naskenovat adresu";
-    }
+    document.getElementById("camera-btn").onclick = () => scanAddress();
 
-    function restartCamera() {
-      if (stream) {
+    let video = document.createElement("video");
+    video.setAttribute("playsinline", "");
+    navigator.mediaDevices.getUserMedia({ video: { facingMode: { exact: "environment" } } })
+      .then(stream => {
         video.srcObject = stream;
-      }
-    }
+        video.play();
+      });
 
-    document.getElementById("camera-btn").onclick = () => {
-      captureAndRecognize();
-    };
-
-    deleteAllBtn.onclick = () => {
-      if (confirm("Chcete opravdu vymazat všechny adresy?")) {
-        addresses = [];
-        save();
-        restartCamera();
-      }
-    };
-
-    navigator.mediaDevices.getUserMedia({
-      video: {
-        facingMode: { exact: "environment" },
-        width: { ideal: 1920 },
-        height: { ideal: 1080 }
-      }
-    }).then(s => {
-      stream = s;
-      video.srcObject = stream;
-    }).catch(err => {
-      alert("Kamera není dostupná: " + err);
-    });
-
-    render();
+    renderAddresses();
   </script>
 </body>
 </html>
