--- a/index.html
+++ b/index.html
@@ -2,28 +2,26 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8" />
-  <title>Kurýrní aplikace v7.1</title>
+  <title>Kurýrní aplikace v7.2</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body { font-family: sans-serif; margin: 0; }
-    #video-container { position: sticky; top: 0; background: #fff; z-index: 1000; }
-    video { width: 100%; height: 160px; object-fit: cover; border-bottom: 1px solid #ccc; }
-    #map-container { position: sticky; top: 160px; z-index: 999; }
-    #map { height: 200px; border-bottom: 1px solid #ccc; }
+    #camera-overlay { display: none; position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.8); z-index: 9999; justify-content: center; align-items: center; }
+    video { width: 100%; height: 100%; object-fit: cover; }
+    #map { height: 300px; border-bottom: 1px solid #ccc; }
     #camera-btn { display: block; width: 100%; font-size: 20px; padding: 16px 0; background: #007bff; color: white; border: none; }
     .address { margin: 5px; padding: 8px; border: 1px solid #ccc; border-radius: 4px; background: #f9f9f9; cursor: pointer; }
   </style>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 <body>
-  <div id="video-container">
-    <video id="video" autoplay playsinline muted></video>
-    <button id="camera-btn">📸 Naskenovat adresu</button>
-  </div>
-  <div id="map-container">
-    <div id="map"></div>
-  </div>
+  <div id="map"></div>
+  <button id="camera-btn">📸 Naskenovat adresu</button>
   <div id="addresses"></div>
+
+  <div id="camera-overlay">
+    <video id="video" autoplay playsinline></video>
+  </div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.1.1/dist/tesseract.min.js"></script>
@@ -67,35 +65,46 @@
           } else {
             alert("Nepodařilo se najít souřadnice.");
           }
-        });
+          closeCamera();
+        }).catch(() => closeCamera());
     }
 
     async function scanAddress() {
-      const canvas = document.createElement("canvas");
-      canvas.width = video.videoWidth;
-      canvas.height = video.videoHeight;
-      const ctx = canvas.getContext("2d");
-      ctx.drawImage(video, 0, 0);
-      const { data: { text } } = await Tesseract.recognize(canvas, 'ces');
+      const overlay = document.getElementById("camera-overlay");
+      overlay.style.display = "flex";
 
-      const clean = text.replace(/[^A-Za-z0-9á-žÁ-Ž\s\/\-]/g, '').trim();
-      if (!clean) { alert("❌ Nenalezena adresa."); return; }
-      if (addresses.map(a => a.text.toLowerCase()).includes(clean.toLowerCase())) {
-        alert("⚠️ Adresa již existuje.");
-        return;
+      let stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: { exact: "environment" } } });
+      let video = document.getElementById("video");
+      video.srcObject = stream;
+      await video.play();
+
+      setTimeout(async () => {
+        const canvas = document.createElement("canvas");
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
+        const ctx = canvas.getContext("2d");
+        ctx.drawImage(video, 0, 0);
+        const { data: { text } } = await Tesseract.recognize(canvas, 'ces');
+
+        const clean = text.replace(/[^A-Za-z0-9á-žÁ-Ž\s\/\-]/g, '').trim();
+        if (!clean) { alert("❌ Nenalezena adresa."); closeCamera(stream); return; }
+        if (addresses.map(a => a.text.toLowerCase()).includes(clean.toLowerCase())) {
+          alert("⚠️ Adresa již existuje."); closeCamera(stream); return;
+        }
+        geocode(clean);
+        closeCamera(stream);
+      }, 1000);
+    }
+
+    function closeCamera(stream) {
+      let overlay = document.getElementById("camera-overlay");
+      overlay.style.display = "none";
+      if (stream && stream.getTracks) {
+        stream.getTracks().forEach(track => track.stop());
       }
-      geocode(clean);
     }
 
     document.getElementById("camera-btn").onclick = () => scanAddress();
-
-    let video = document.getElementById("video");
-    navigator.mediaDevices.getUserMedia({ video: { facingMode: { exact: "environment" } } })
-      .then(stream => {
-        video.srcObject = stream;
-        video.play();
-      });
-
     renderAddresses();
   </script>
 </body>
